--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <p>
+      <a href="recipes/gnocchi.html">Crispy Gnocchi with Spinach and Feta</a>
+    </p>
   </body>
 </html>
