Update homepage and gnocchi recipe

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p>
-      <a href="recipes/gnocchi.html">Crispy Gnocchi with Spinach and Feta</a>
-    </p>
+    <h4>Or: Peter's NYT Cooking Staples</h4>
+    <ul>
+      <li><a href="recipes/gnocchi.html">Crispy Gnocchi with Spinach and Feta</a></li>
+   <li><a href="recipes/tostadas.html">Spicy Tuna and Avocado Tostadas</a></li> 
+   <li><a href="recipes/spinart.html">Creamy Spinach-Artichoke Chicken Stew</a></li>
   </body>
 </html>
