--- a/recipes/gnocchi.html
+++ b/recipes/gnocchi.html
@@ -6,6 +6,46 @@
     <title>Crispy Gnocchi with Spinach and Feta</title>
   </head>
   <body>
-    <a href="../index.html">Home</a>"
+    <h1>Crispy Gnocchi With Spinach and Feta</h1>
+    <p><em>Courtesy of The New York Times</em></p>
+    <img src="../images/gnocchi.jpg" width="400" />
+    <h3>Ingredients</h3>
+    <ul>
+      <li>5 ounces baby spinach</li>
+      <li>6 ounces Greek feta, crumbled (about 1 cup)</li>
+      <li>1 lemon, halved</li>
+      <li>5tablespoons extra-virgin olive oil</li>
+      <li>Salt and pepper</li>
+      <li>
+        (16- to 17-ounce) package potato gnocchi (shelf-stable, fresh or frozen)
+      </li>
+      <li>¼ to ½ teaspoon crushed red pepper</li>
+      <li>2 scallions, thinly sliced</li>
+      <li>Big handful of chopped dill</li>
+      <li>Big handful of chopped mint</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+      <li>
+        Place the spinach into a large bowl. Add half of the feta, juice of ½
+        lemon, 1 tablespoon of olive oil and a big pinch of salt; rub the
+        ingredients vigorously into the spinach to tenderize it. Leave to sit
+        and soften further while you cook the gnocchi.
+      </li>
+      <li>
+        Heat a large (about 12-inch) cast-iron or nonstick skillet over
+        medium-high; add 2 tablespoons of olive oil. Add the gnocchi to the pan,
+        breaking up any that are stuck together. Cook for 8 to 10 minutes,
+        tossing every 2 minutes, until golden and crispy all over. Allow to cool
+        in the pan for 5 minutes; they will further crisp as they cool.
+      </li>
+      <li>
+        Add the gnocchi to the spinach, along with the red pepper, scallions,
+        dill and mint. Drizzle with about 2 tablespoons of olive oil, add the
+        remaining crumbled feta and toss to combine. Squeeze the remaining lemon
+        juice over top and serve.
+      </li>
+    </ol>
+    <a href="../index.html">Home</a>
   </body>
 </html>
