Add descriptions to receipes

--- a/recipes/spinart.html
+++ b/recipes/spinart.html
@@ -9,6 +9,14 @@
     <h1>Creamy Spinach-Artichoke Chicken Stew</h1>
     <p><em>Courtesy of The New York Times</em></p>
     <img src="../images/spinart.jpg" width="400" />
+    <p>
+      This creamy chicken stew is spinach-artichoke dip reimagined as a simple
+      stovetop braise. It comes together quickly, thanks to frozen spinach and
+      jarred artichoke hearts, though if you have time, there is also a
+      slow-cooker version of this recipe. Fresh dill and scallions are added
+      just before serving, and provide bright, herbal flavor that offsets the
+      richness of the finished dish.
+    </p>
     <h3>Ingredients</h3>
     <ul>
       <li>2 tablespoons unsalted butter</li>
