--- a/recipes/tostadas.html
+++ b/recipes/tostadas.html
@@ -9,6 +9,17 @@
     <h1>Spicy Tuna and Avocado Tostadas</h1>
     <img src="../images/tostadas.jpg" width="400" />
     <p><em>Courtesy of The New York Times</em></p>
+    <p>
+      Topped with a cross between a chunky guacamole and a tuna salad, these
+      tostadas are a super satisfying, no-cook lunch or dinner for a steamy
+      summer night when turning on the stove is a no-go. Instead of fresh tuna,
+      this recipe employs the tinned variety, making these tostadas accessible
+      for any budget. The simple serrano and lime dressing is tart and spicy
+      with a hint of creaminess that balances the lean nature of canned tuna.
+      Eat the salad like a dip with a bag of totopos at your desk, or pack it up
+      with a bottle of wine and assemble your tostadas outside for a picnic in
+      the park or day at the beach.
+    </p>
     <h3>Ingredients</h3>
     <ul>
       <li>2 medium garlic cloves, finely grated</li>
