--- a/recipes/gnocchi.html
+++ b/recipes/gnocchi.html
@@ -9,6 +9,19 @@
     <h1>Crispy Gnocchi With Spinach and Feta</h1>
     <p><em>Courtesy of The New York Times</em></p>
     <img src="../images/gnocchi.jpg" width="400" />
+    <p>
+      Inspired by the herbaceous and jaunty flavors of spanakopita, the savory,
+      ever popular Greek pie, spinach and feta headline this textural gnocchi
+      salad. The spinach is not cooked, but is simply massaged, which softens it
+      while ensuring it maintains its leafy structure. Incorporating some feta
+      to the spinach massage is a functional move — the salt in the feta helps
+      to tenderize the leaves — but it also adds a hint of quiet luxury to this
+      dish, as the leaves become coated with the creamy, briny cheese. Be
+      heavy-handed with your herbs and lemon, as these bring boldness and
+      freshness that play off the saltiness of the feta. Everyday shelf-stable
+      gnocchi from your local supermarket is perfect for crisping in the pan; if
+      you choose to use frozen variety, no defrosting is required.
+    </p>
     <h3>Ingredients</h3>
     <ul>
       <li>5 ounces baby spinach</li>
