Add styling to index and recipe pages

--- a/recipes/gnocchi.html
+++ b/recipes/gnocchi.html
@@ -3,62 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Crispy Gnocchi with Spinach and Feta</title>
   </head>
   <body>
     <h1>Crispy Gnocchi With Spinach and Feta</h1>
-    <p><em>Courtesy of The New York Times</em></p>
-    <img src="../images/gnocchi.jpg" width="400" />
-    <p>
-      Inspired by the herbaceous and jaunty flavors of spanakopita, the savory,
-      ever popular Greek pie, spinach and feta headline this textural gnocchi
-      salad. The spinach is not cooked, but is simply massaged, which softens it
-      while ensuring it maintains its leafy structure. Incorporating some feta
-      to the spinach massage is a functional move — the salt in the feta helps
-      to tenderize the leaves — but it also adds a hint of quiet luxury to this
-      dish, as the leaves become coated with the creamy, briny cheese. Be
-      heavy-handed with your herbs and lemon, as these bring boldness and
-      freshness that play off the saltiness of the feta. Everyday shelf-stable
-      gnocchi from your local supermarket is perfect for crisping in the pan; if
-      you choose to use frozen variety, no defrosting is required.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>5 ounces baby spinach</li>
-      <li>6 ounces Greek feta, crumbled (about 1 cup)</li>
-      <li>1 lemon, halved</li>
-      <li>5tablespoons extra-virgin olive oil</li>
-      <li>Salt and pepper</li>
-      <li>
-        (16- to 17-ounce) package potato gnocchi (shelf-stable, fresh or frozen)
-      </li>
-      <li>¼ to ½ teaspoon crushed red pepper</li>
-      <li>2 scallions, thinly sliced</li>
-      <li>Big handful of chopped dill</li>
-      <li>Big handful of chopped mint</li>
-    </ul>
-    <h3>Instructions</h3>
-    <ol>
-      <li>
-        Place the spinach into a large bowl. Add half of the feta, juice of ½
-        lemon, 1 tablespoon of olive oil and a big pinch of salt; rub the
-        ingredients vigorously into the spinach to tenderize it. Leave to sit
-        and soften further while you cook the gnocchi.
-      </li>
-      <li>
-        Heat a large (about 12-inch) cast-iron or nonstick skillet over
-        medium-high; add 2 tablespoons of olive oil. Add the gnocchi to the pan,
-        breaking up any that are stuck together. Cook for 8 to 10 minutes,
-        tossing every 2 minutes, until golden and crispy all over. Allow to cool
-        in the pan for 5 minutes; they will further crisp as they cool.
-      </li>
-      <li>
-        Add the gnocchi to the spinach, along with the red pepper, scallions,
-        dill and mint. Drizzle with about 2 tablespoons of olive oil, add the
-        remaining crumbled feta and toss to combine. Squeeze the remaining lemon
-        juice over top and serve.
-      </li>
-    </ol>
-    <a href="../index.html">Home</a>
+    <div class="description">
+      <img src="../images/gnocchi.jpg" width="240" />
+      <p>
+        Inspired by the herbaceous and jaunty flavors of <em>spanakopita</em>,
+        the savory, ever popular Greek pie, spinach and feta headline this
+        textural gnocchi salad. The spinach is not cooked, but is simply
+        massaged, which softens it while ensuring it maintains its leafy
+        structure. Incorporating some feta to the spinach massage is a
+        functional move — the salt in the feta helps to tenderize the leaves —
+        but it also adds a hint of quiet luxury to this dish, as the leaves
+        become coated with the creamy, briny cheese. Be heavy-handed with your
+        herbs and lemon, as these bring boldness and freshness that play off the
+        saltiness of the feta. Everyday shelf-stable gnocchi from your local
+        supermarket is perfect for crisping in the pan; if you choose to use
+        frozen variety, no defrosting is required.
+      </p>
+      <p>
+        <span><em>Courtesy of The New York Times</em></span>
+      </p>
+    </div>
+    <div class="ingredients">
+      <h3>Ingredients</h3>
+      <ul>
+        <li>5 ounces baby spinach</li>
+        <li>6 ounces Greek feta, crumbled (about 1 cup)</li>
+        <li>1 lemon, halved</li>
+        <li>5tablespoons extra-virgin olive oil</li>
+        <li>Salt and pepper</li>
+        <li>
+          (16- to 17-ounce) package potato gnocchi (shelf-stable, fresh or
+          frozen)
+        </li>
+        <li>¼ to ½ teaspoon crushed red pepper</li>
+        <li>2 scallions, thinly sliced</li>
+        <li>Big handful of chopped dill</li>
+        <li>Big handful of chopped mint</li>
+      </ul>
+    </div>
+    <div class="description">
+      <h3>Instructions</h3>
+      <ol>
+        <li>
+          Place the spinach into a large bowl. Add half of the feta, juice of ½
+          lemon, 1 tablespoon of olive oil and a big pinch of salt; rub the
+          ingredients vigorously into the spinach to tenderize it. Leave to sit
+          and soften further while you cook the gnocchi.
+        </li>
+        <li>
+          Heat a large (about 12-inch) cast-iron or nonstick skillet over
+          medium-high; add 2 tablespoons of olive oil. Add the gnocchi to the
+          pan, breaking up any that are stuck together. Cook for 8 to 10
+          minutes, tossing every 2 minutes, until golden and crispy all over.
+          Allow to cool in the pan for 5 minutes; they will further crisp as
+          they cool.
+        </li>
+        <li>
+          Add the gnocchi to the spinach, along with the red pepper, scallions,
+          dill and mint. Drizzle with about 2 tablespoons of olive oil, add the
+          remaining crumbled feta and toss to combine. Squeeze the remaining
+          lemon juice over top and serve.
+        </li>
+      </ol>
+    </div>
+    <div class="footer">
+      <a href="../index.html">Home</a>
+    </div>
   </body>
 </html>
