--- a/recipes/spinart.html
+++ b/recipes/spinart.html
@@ -3,75 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Creamy Spinach-Artichoke Chicken Stew</title>
   </head>
   <body>
     <h1>Creamy Spinach-Artichoke Chicken Stew</h1>
-    <p><em>Courtesy of The New York Times</em></p>
-    <img src="../images/spinart.jpg" width="400" />
-    <p>
-      This creamy chicken stew is spinach-artichoke dip reimagined as a simple
-      stovetop braise. It comes together quickly, thanks to frozen spinach and
-      jarred artichoke hearts, though if you have time, there is also a
-      slow-cooker version of this recipe. Fresh dill and scallions are added
-      just before serving, and provide bright, herbal flavor that offsets the
-      richness of the finished dish.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>2 tablespoons unsalted butter</li>
-      <li>1 large yellow or red onion, finely chopped</li>
-      <li>Kosher salt and black pepper</li>
-      <li>3 celery stalks, chopped</li>
-      <li>8 garlic cloves, smashed and chopped</li>
-      <li>2 cups chicken stock</li>
-      <li>¾ cup white wine</li>
-      <li>2 to 2¼ pounds boneless, skinless chicken thighs</li>
-      <li>½ lemon, juiced (about 1½ tablespoons)</li>
-      <li>1 teaspoon red-pepper flakes</li>
-      <li>1 (10-ounce) package frozen cut spinach</li>
-      <li>
-        1 (12-ounce) jar marinated artichoke hearts, drained (about 1 heaping
-        cup artichoke hearts)
-      </li>
-      <li>½ cup cream cheese (about 4 ounces)</li>
-      <li>½ cup finely chopped fresh dill</li>
-      <li>4 to 6 scallions, thinly sliced, for topping</li>
-      <li>Grated Parmesan cheese, for topping</li>
-    </ul>
-    <h3>Instructions</h3>
-    <ol>
-      <li>
-        In a large Dutch oven over medium-high heat, melt the butter. Add the
-        onion, season lightly with salt, and cook, stirring occasionally, until
-        softened and translucent, about 5 minutes. Add the celery and cook,
-        stirring, until softened, about 5 minutes, adjusting the heat as
-        necessary to avoid scorching. Stir in the garlic.
-      </li>
-      <li>
-        Pour in the stock and wine, and bring to a bubble. Add the chicken
-        thighs, lemon juice and red-pepper flakes; season with 1 teaspoon salt
-        and a generous amount of pepper. Mix well to combine all the ingredients
-        and bring to a boil.
-      </li>
-      <li>
-        Reduce the heat to maintain a low simmer and simmer, uncovered, for 20
-        minutes.
-      </li>
-      <li>
-        Add the frozen spinach and the artichoke hearts to the pot. Increase the
-        heat to medium-high and cook, stirring to help the spinach defrost and
-        wilt into the stew. When the spinach is warm and evenly distributed,
-        reduce the heat and simmer until the chicken is tender and the flavors
-        are blended, another 10 to 15 minutes.
-      </li>
-      <li>
-        Add the cream cheese in dollops, stirring to melt it into the soup. Add
-        the dill. Using two forks, coarsely break or shred the chicken into
-        large chunks. Taste and add more salt and black pepper if necessary.
-      </li>
-      <li>Divide the stew among bowls, and top with scallions and Parmesan.</li>
-    </ol>
-    <a href="../index.html">Home</a>
+    <div class="description">
+      <img src="../images/spinart.jpg" width="240" />
+      <p>
+        This creamy chicken stew is spinach-artichoke dip reimagined as a simple
+        stovetop braise. It comes together quickly, thanks to frozen spinach and
+        jarred artichoke hearts, though if you have time, there is also a
+        slow-cooker version of this recipe. Fresh dill and scallions are added
+        just before serving, and provide bright, herbal flavor that offsets the
+        richness of the finished dish.
+      </p>
+      <p>
+        <span><em>Courtesy of The New York Times</em></span>
+      </p>
+    </div>
+    <div class="ingredients">
+      <h3>Ingredients</h3>
+      <ul>
+        <li>2 tablespoons unsalted butter</li>
+        <li>1 large yellow or red onion, finely chopped</li>
+        <li>Kosher salt and black pepper</li>
+        <li>3 celery stalks, chopped</li>
+        <li>8 garlic cloves, smashed and chopped</li>
+        <li>2 cups chicken stock</li>
+        <li>¾ cup white wine</li>
+        <li>2 to 2¼ pounds boneless, skinless chicken thighs</li>
+        <li>½ lemon, juiced (about 1½ tablespoons)</li>
+        <li>1 teaspoon red-pepper flakes</li>
+        <li>1 (10-ounce) package frozen cut spinach</li>
+        <li>
+          1 (12-ounce) jar marinated artichoke hearts, drained (about 1 heaping
+          cup artichoke hearts)
+        </li>
+        <li>½ cup cream cheese (about 4 ounces)</li>
+        <li>½ cup finely chopped fresh dill</li>
+        <li>4 to 6 scallions, thinly sliced, for topping</li>
+        <li>Grated Parmesan cheese, for topping</li>
+      </ul>
+    </div>
+    <div class="description">
+      <h3>Instructions</h3>
+      <ol>
+        <li>
+          In a large Dutch oven over medium-high heat, melt the butter. Add the
+          onion, season lightly with salt, and cook, stirring occasionally,
+          until softened and translucent, about 5 minutes. Add the celery and
+          cook, stirring, until softened, about 5 minutes, adjusting the heat as
+          necessary to avoid scorching. Stir in the garlic.
+        </li>
+        <li>
+          Pour in the stock and wine, and bring to a bubble. Add the chicken
+          thighs, lemon juice and red-pepper flakes; season with 1 teaspoon salt
+          and a generous amount of pepper. Mix well to combine all the
+          ingredients and bring to a boil.
+        </li>
+        <li>
+          Reduce the heat to maintain a low simmer and simmer, uncovered, for 20
+          minutes.
+        </li>
+        <li>
+          Add the frozen spinach and the artichoke hearts to the pot. Increase
+          the heat to medium-high and cook, stirring to help the spinach defrost
+          and wilt into the stew. When the spinach is warm and evenly
+          distributed, reduce the heat and simmer until the chicken is tender
+          and the flavors are blended, another 10 to 15 minutes.
+        </li>
+        <li>
+          Add the cream cheese in dollops, stirring to melt it into the soup.
+          Add the dill. Using two forks, coarsely break or shred the chicken
+          into large chunks. Taste and add more salt and black pepper if
+          necessary.
+        </li>
+        <li>
+          Divide the stew among bowls, and top with scallions and Parmesan.
+        </li>
+      </ol>
+    </div>
+    <div class="footer">
+      <a href="../index.html">Home</a>
+    </div>
   </body>
 </html>
