--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <h4>Or: Peter's NYT Cooking Staples</h4>
+    <div class="card">
+      <div class="marquee">
     <ul>
       <li><a href="recipes/gnocchi.html">Crispy Gnocchi with Spinach and Feta</a></li>
    <li><a href="recipes/tostadas.html">Spicy Tuna and Avocado Tostadas</a></li> 
    <li><a href="recipes/spinart.html">Creamy Spinach-Artichoke Chicken Stew</a></li>
+ </ul></body></div></div></body>
   </body>
 </html>
