--- a/recipes/tostadas.html
+++ b/recipes/tostadas.html
@@ -3,58 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Spicy Tuna and Avocado Tostadas</title>
   </head>
   <body>
     <h1>Spicy Tuna and Avocado Tostadas</h1>
-    <img src="../images/tostadas.jpg" width="400" />
-    <p><em>Courtesy of The New York Times</em></p>
-    <p>
-      Topped with a cross between a chunky guacamole and a tuna salad, these
-      tostadas are a super satisfying, no-cook lunch or dinner for a steamy
-      summer night when turning on the stove is a no-go. Instead of fresh tuna,
-      this recipe employs the tinned variety, making these tostadas accessible
-      for any budget. The simple serrano and lime dressing is tart and spicy
-      with a hint of creaminess that balances the lean nature of canned tuna.
-      Eat the salad like a dip with a bag of totopos at your desk, or pack it up
-      with a bottle of wine and assemble your tostadas outside for a picnic in
-      the park or day at the beach.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>2 medium garlic cloves, finely grated</li>
-      <li>1 serrano chile, finely diced</li>
-      <li>1 lime, juiced (about 2 tablespoons)</li>
-      <li>2 tablespoons mayonnaise</li>
-      <li>Salt and pepper</li>
-      <li>⅓ packed cup cilantro leaves and tender stems</li>
-      <li>1 large ripe Hass avocado</li>
-      <li>½ small red onion</li>
-      <li>1 medium tomato</li>
-      <li>2 (5-ounce) cans tuna packed in oil, drained</li>
-      <li>6 tostada shells</li>
-      <li>Hot sauce, for serving (optional)</li>
-    </ul>
-    <h3>Instructions</h3>
-    <ol>
-      <li>
-        Make the dressing: In a medium bowl, mix together the garlic, serrano,
-        lime juice, mayonnaise, ½ teaspoon salt and ½ teaspoon pepper until well
-        combined; set aside.
-      </li>
-      <li>
-        Make the salad: Roughly chop the cilantro, chop the avocado, dice the
-        red onion and tomato, and place everything in the bowl with the
-        dressing. Add the tuna and ¼ teaspoon salt and toss until combined.
-        Taste and add more salt as desired. Serve immediately, or cover and
-        refrigerate for up to two days.
-      </li>
-      <li>
-        When you are ready to eat, divide the filling among the tostada shells
-        (about a generous ½ cup tuna salad for each tostada) and top with hot
-        sauce, if desired.
-      </li>
-    </ol>
-    <a href="../index.html">Home</a>
+    <div class="description">
+      <img src="../images/tostadas.jpg" width="400" />
+      <p>
+        Topped with a cross between a chunky guacamole and a tuna salad, these
+        tostadas are a super satisfying, no-cook lunch or dinner for a steamy
+        summer night when turning on the stove is a no-go. Instead of fresh
+        tuna, this recipe employs the tinned variety, making these tostadas
+        accessible for any budget. The simple serrano and lime dressing is tart
+        and spicy with a hint of creaminess that balances the lean nature of
+        canned tuna. Eat the salad like a dip with a bag of totopos at your
+        desk, or pack it up with a bottle of wine and assemble your tostadas
+        outside for a picnic in the park or day at the beach.
+      </p>
+      <p>
+        <span><em>Courtesy of The New York Times</em></span>
+      </p>
+    </div>
+    <div class="ingredients">
+      <h3>Ingredients</h3>
+      <ul>
+        <li>2 medium garlic cloves, finely grated</li>
+        <li>1 serrano chile, finely diced</li>
+        <li>1 lime, juiced (about 2 tablespoons)</li>
+        <li>2 tablespoons mayonnaise</li>
+        <li>Salt and pepper</li>
+        <li>⅓ packed cup cilantro leaves and tender stems</li>
+        <li>1 large ripe Hass avocado</li>
+        <li>½ small red onion</li>
+        <li>1 medium tomato</li>
+        <li>2 (5-ounce) cans tuna packed in oil, drained</li>
+        <li>6 tostada shells</li>
+        <li>Hot sauce, for serving (optional)</li>
+      </ul>
+    </div>
+    <div class="description">
+      <h3>Instructions</h3>
+      <ol>
+        <li>
+          Make the dressing: In a medium bowl, mix together the garlic, serrano,
+          lime juice, mayonnaise, ½ teaspoon salt and ½ teaspoon pepper until
+          well combined; set aside.
+        </li>
+        <li>
+          Make the salad: Roughly chop the cilantro, chop the avocado, dice the
+          red onion and tomato, and place everything in the bowl with the
+          dressing. Add the tuna and ¼ teaspoon salt and toss until combined.
+          Taste and add more salt as desired. Serve immediately, or cover and
+          refrigerate for up to two days.
+        </li>
+        <li>
+          When you are ready to eat, divide the filling among the tostada shells
+          (about a generous ½ cup tuna salad for each tostada) and top with hot
+          sauce, if desired.
+        </li>
+      </ol>
+    </div>
+    <div class="footer">
+      <a href="../index.html">Home</a>
+    </div>
   </body>
 </html>
